--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,27 +14,27 @@
         <servlet-name>RegisterServlet</servlet-name>
         <servlet-class>com.revature.servlets.RegisterServlet</servlet-class>
     </servlet>
-
+<!--
     <servlet>
         <servlet-name>UserServlet</servlet-name>
         <servlet-class>com.revature.servlets.UserServlet</servlet-class>
     </servlet>
-
+-->
     <servlet-mapping>
         <servlet-name>FrontServlet</servlet-name>
-        <url-pattern>/index</url-pattern>
+        <url-pattern>/user</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
         <servlet-name>RegisterServlet</servlet-name>
         <url-pattern>/register</url-pattern>
     </servlet-mapping>
-
+<!--
     <servlet-mapping>
         <servlet-name>UserServlet</servlet-name>
-        <url-pattern>/users/*</url-pattern>
+        <url-pattern>/user</url-pattern>
     </servlet-mapping>
-    
+-->
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
