--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -20,6 +20,11 @@
         <servlet-class>com.revature.servlets.UserServlet</servlet-class>
     </servlet>
 
+    <servlet>
+        <servlet-name>ApplyServlet</servlet-name>
+        <servlet-class>com.revature.servlets.ApplyServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
         <servlet-name>FrontServlet</servlet-name>
         <url-pattern>/user</url-pattern>
@@ -33,6 +38,11 @@
     <servlet-mapping>
         <servlet-name>UserServlet</servlet-name>
         <url-pattern>/userSession</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>ApplyServlet</servlet-name>
+        <url-pattern>/apply</url-pattern>
     </servlet-mapping>
 
     <welcome-file-list>
